# rs-ibed

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD-PARTY-LICENSE-FULL.md  THIRD-PARTY-LICENSE.md  config.toml  docker-compose.s3.yml  openapi.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/: docker-compose.pgsql.yml
docs/src/pages/: index.astro
frontend/: .prettierignore  README.md  eslint.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/lib/: api.ts
frontend/src/lib/components/: Button.svelte  Sidebar.svelte
frontend/src/lib/i18n/: en.ts  index.svelte.ts  zh.ts
frontend/src/lib/sdk/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/lib/stores/: theme.svelte.ts
frontend/src/routes/: +layout.svelte  layout.css
migrations/pgsql/: 20260319185500_init_images.sql  20260404000000_add_storage_endpoints.sql
migrations/sqlite/: 20260319185500_init_images.sql  20260404000000_add_storage_endpoints.sql
scripts/: bump-version.sh  generate-licenses.js
src/: auth.rs  cli.rs  config.rs  error.rs  exif.rs  file_type.rs  frontend.rs  image_proc.rs  main.rs  path_parser.rs  router.rs  server.rs  state.rs  storage.rs
src/db/: mod.rs  postgres.rs  repo.rs  sqlite.rs
src/handlers/: admin.rs  auth.rs  mod.rs  upload.rs  view.rs
src/models/: image.rs  mod.rs  storage_endpoint.rs
src/storage/: mod.rs
src/storage_backend/: local.rs  mod.rs  s3.rs
(+25 files in other folders)
