[package]
name = "rs-ibed"
version = "0.0.1"
edition = "2024"
default-run = "rs-ibed"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
image = "0.25"
infer = "0.19"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "chrono"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
rust-embed = "8"
mime_guess = "2"
reqwest = { version = "0.12", features = ["multipart"] }
